# openalpha

./: README.md  pyproject.toml
openalpha/: evaluator.py  util.py
openalpha.egg-info/: PKG-INFO
